[gd_scene load_steps=9 format=3 uid="uid://vknj5gpt6w83"]

[ext_resource type="Texture2D" uid="uid://ckxh8f30ahl2j" path="res://assets/object/ring/0.png" id="1_fkypc"]
[ext_resource type="Script" path="res://scripts/object/objectRing.gd" id="1_l6oy5"]
[ext_resource type="Texture2D" uid="uid://ckitps2wu05e6" path="res://assets/object/ring/1.png" id="2_rdqjk"]
[ext_resource type="Texture2D" uid="uid://b2732dbjmr7di" path="res://assets/object/ring/2.png" id="3_cmwwa"]
[ext_resource type="Texture2D" uid="uid://dqfqi3p2dflih" path="res://assets/object/ring/3.png" id="4_o73wu"]
[ext_resource type="AudioStream" uid="uid://bdvyk4msatsta" path="res://assets/sound/object/ring.wav" id="6_bve4j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pmvm1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fkypc")
}, {
"duration": 1.0,
"texture": ExtResource("2_rdqjk")
}, {
"duration": 1.0,
"texture": ExtResource("3_cmwwa")
}, {
"duration": 1.0,
"texture": ExtResource("4_o73wu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3n8xd"]
size = Vector2(16, 16)

[node name="objectRing" type="Node2D"]
script = ExtResource("1_l6oy5")

[node name="ringSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_pmvm1")
frame_progress = 0.587987

[node name="ringHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ringHitBox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_3n8xd")
debug_color = Color(0.552941, 0.556863, 0.215686, 0.419608)

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_bve4j")

[connection signal="body_entered" from="ringHitBox" to="." method="_on_ring_hit_box_body_entered"]
[connection signal="finished" from="SFX" to="." method="_on_sfx_finished"]
